unpackaged/main/default/objects/ID_V_History__c/ID_V_History__c.object-meta.xml
<CustomObject>
    <label>ID&amp;V History</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>ID&amp;V History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID&amp;V Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>