unpackaged/main/default/objects/ID_V_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ID&amp;V Histories</relationshipLabel>
    <relationshipName>ID_V_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>