unpackaged/main/default/objects/ID_V_History__c/fields/Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Time__c</fullName>
    <label>Call Time</label>
    <type>DateTime</type>
</CustomField>