unpackaged/main/default/objects/ID_V_History__c/fields/Validation_Passed__c.field-meta.xml
<CustomField>
    <fullName>Validation_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Passed?</label>
    <type>Checkbox</type>
</CustomField>